<resources>
    <string name="app_name">Food shop</string>
    <string name="rightAddress">The Right Address\nFor Shopping\nAnyday</string>
    <string name="quality">Tharuka lakshan is the best programmer</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry</string>
    <string name="ingrediamts"> 1 . Del \n 2. polthel \n 3 . pol \n 4 . blackpepper</string>

    <string name="yes_btn">Yes</string>
    <string name="no_btn">No</string>
    <string name="donator_title">Donators</string>
    <string name="add_donator_details_heading">Add Donator Details Below</string>
    <string name="donator_name">Donator Name</string>
    <string name="add_donator_name">Add your name here</string>
    <string name="donator_email">Donator Email</string>
    <string name="add_donator_email">Add your email here</string>
    <string name="donator_amount">Donated Amount</string>
    <string name="add_amount">Add amount</string>
    <string name="donator_date">Donation Date</string>
    <string name="ad_donation_date">Add date</string>
    <string name="confirm_btn">Confirm</string>
    <string name="notify_donation_txt">You have received a donation !</string>
    <string name="click_to_view_donation_txt">Click to view</string>
    <string name="user_profile_name">Pathum Dissanayake</string>
    <string name="ratings">Ratings</string>
    <string name="rating_val">0</string>
    <string name="tips">Tips</string>
    <string name="tip_val">0</string>
    <string name="photos">Photos</string>
    <string name="photos_val">0</string>
    <string name="CookBook">CookBook</string>
    <string name="Activity">Activity</string>
    <string name="share_exp">Share your experience here</string>
    <string name="your_info">Your Info</string>
    <string name="full_name">Full Name</string>
    <string name="samplename">Pathum Dissanayake</string>
    <string name="email_sample">Email Address</string>
    <string name="sample_email">dwejh123@gmailcom</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="sample_mobile_num">073256478</string>
    <string name="pref">Your Preference</string>
    <string name="languages">Languages</string>
    <string name="sample_language">English</string>
    <string name="tnC_text">Terms And Conditions</string>
    <string name="del_acc_btn_txt">Delete Account</string>
    <string name="signout_btn_val">Sign Out</string>
    <string name="setings_heading">Settings</string>
    <string name="view_donations_heading">View Donations</string>
    <string name="donations_notification_txt">You have received a donation of 1000 rupees !</string>
    <string name="donator_name_view_donations">Donator Name</string>
    <string name="donator_email_view_donations">Donator Email</string>
    <string name="donated_amount_view_donations">Donated Amount</string>
    <string name="donated_date_view_donations">Donation Date</string>
    <string name="sample_donator_name">Sandithi Wanniarachchi</string>
    <string name="sample_donator_email">sandithiwanniarachchi@gmail.com</string>
    <string name="sample_donation_amount">1000 LKR</string>
    <string name="sample_donation_date">2023-02-25</string>
    <string name="add_recepies_heading">Add Recepies</string>
    <string name="res_name">Name</string>
    <string name="res_name_sample_txt">Give your recepie a name</string>
    <string name="res_description">Small Description</string>
    <string name="res_description_sample_txt">Description comes here</string>
    <string name="required_items">Required Items</string>
    <string name="required_items_sample_txt">What are required</string>
    <string name="recepie">Receipe</string>
    <string name="recepie_steps_sample_txt">Include recepie steps</string>
    <string name="sample_res_photos">Sample Photos</string>
    <string name="upload_here_txt">Upload Here</string>
    <string name="submit_res_btn">Submit</string>
    <string name="cancel_res_values">Cancel</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="first_fragment_label">First Fragment</string>

</resources>